--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body
 {   
-    color: #333;    
+    background-color: darkgrey;   
     text-align: center;
     font-family: "Arial";
     font-size: 16px;
