--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,6 @@
 body
-{     
+{    
+    background-color: darkgrey; 
     text-align: center;
     font-family: "TimesNewRoman";
     font-size: 16px;
