Se cambio descripción, cabecera y color te texto a azul

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,6 @@
 body
-{    
+{   
+    color: darkblue; 
     background-color: darkgrey; 
     text-align: center;
     font-family: "TimesNewRoman";
