cambiando texto a color negro

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body
 {   
-    color: darkblue; 
+    color: black; 
     background-color: darkgrey; 
     text-align: center;
     font-family: "TimesNewRoman";
