--- a/css/estilos.css
+++ b/css/estilos.css
@@ -24,7 +24,7 @@ body
         text-align: center;
     }
 
-#cabecera
+#header
 {
     background: #33A;
     box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
@@ -34,7 +34,7 @@ body
     padding: 0.5em;
 }
 
-    #cabecera #tagline
+    #header #tagline
     {
         padding: 0 0 0 1em;
         font-weight: normal;
