--- a/css/estilos.css
+++ b/css/estilos.css
@@ -40,3 +40,11 @@ body
         font-weight: normal;
         font-size: 0.8em;
     }
+
+#footer
+{
+    background: #33A;
+    text-align: center;
+    color: white;
+    font-weight: bolder;
+}
